[gd_scene load_steps=3 format=2]

[ext_resource path="res://tetris_block/tetris_block.gd" type="Script" id=1]
[ext_resource path="res://tetris_block/tetris_piece.tscn" type="PackedScene" id=2]

[node name="tetris_block" type="KinematicBody2D"]

z = -1
input_pickable = false
collision_layer = 2
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z", "collision" ]

[node name="piece1" parent="." instance=ExtResource( 2 )]

position = Vector2( 16, 16 )
_sections_unfolded = [ "Transform" ]

[node name="piece2" parent="." instance=ExtResource( 2 )]

position = Vector2( 48, 16 )

[node name="piece3" parent="." instance=ExtResource( 2 )]

position = Vector2( -16, 16 )

[node name="piece4" parent="." instance=ExtResource( 2 )]

position = Vector2( 16, 48 )


